<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="alert_title">Alert</string>
    <string name="app_name">Weather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_week">Week</string>
    <string name="tv_wind">Wind</string>
    <string name="tv_pressure">Pressure</string>
    <string name="tv_humidity">Humidity</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_language">Language</string>
    <string name="rb_arabic">Arabic</string>
    <string name="rb_english">English</string>
    <string name="tv_temperature">Temperature</string>
    <string name="rb_celsius">Celsius</string>
    <string name="rb_kelvin">Kelvin</string>
    <string name="rb_fahrenheit">Fahrenheit</string>
    <string name="tv_wind_speed">Wind Speed</string>
    <string name="rb_meter_sec">Meter / Sec</string>
    <string name="rb_miles_hour">Miles / Hour</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btn_save">Save</string>
    <string name="tv_from">From</string>
    <string name="tv_to">To</string>
    <string name="rb_alarm">Alarm</string>
    <string name="rb_notification">Notification</string>
    <string name="btn_save_alert">Save</string>
    <string name="ask_location_message">Please Allow us to know your location</string>

    <string name="degree" translatable="false">%s&#xb0;</string>
    <string name="feels_like">feels like %s&#xb0;</string>
    <string name="loading">Loading ..</string>
    <string name="tv_cloud">Cloud</string>
    <string name="tv_location">Location</string>
    <!--    <string name="shoe_size">SIZE: %.1f</string>-->

    <string name="by_gps">By GPS</string>
    <string name="by_location">By Location</string>
    <string name="save_location_dailog">Do you want to save this location ?</string>
    <string name="sure">Sure</string>
    <string name="save_favorite_message">Favorite Item has been saved</string>
    <string name="channel_name">Alert Channel Notification</string>
    <string name="channel_description">Alert Description</string>
    <string name="btn_ok">Okay</string>

    <string name="date_picker">Choose date</string>
    <string name="time_picker">Choose time</string>
    <string name="languageSetting">language</string>
    <string name="select_date_from">Select date from</string>
    <string name="select_data_to">Select Data To</string>
    <string name="select_location">Select Location</string>
    <string name="tv_alert">Alert</string>
    <string name="by_alert_dialog">Alert Dialog</string>
    <string name="by_notification">Notification</string>
    <string name="display_on_top_title">Display on top</string>
    <string name="display_on_top_message">You Should let us to draw on top</string>
    <string name="okay">Okay</string>
    <string name="no">No</string>
    <string name="btn_cancel">Cancel</string>
</resources>
