<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shimmer_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:shimmer_auto_start="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/measurementsHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:src="@drawable/wind_speed_icon" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_wind" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/loading" />

            </LinearLayout>


            <!--Pressure-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure_gauge" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_pressure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/loading" />

            </LinearLayout>

            <!--Humedity-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_humidity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:lines="1"

                    android:text="@string/loading" />

            </LinearLayout>

            <!--Cloud-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:src="@drawable/clouds" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cloud" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/loading" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</com.facebook.shimmer.ShimmerFrameLayout>
